<resources>
    <string name="app_name">RoadSoSecurity</string>
    <string name="google_maps_key">AIzaSyBH5FocURFuKn_id48TecGkcvL3HicTjPY</string>
    <string name="anomalyButton">Start your trip</string>
    <string name="aboutButton">About</string>
    <string name="speed">Speed:</string>
    <string name="distance">Distance:</string>
    <string name="anomaly">Anomaly detected:</string>
    <string name="savePhoneNumber">Save</string>
    <string name="insertNumber">Insert valid phone number</string>
    <string name="accessibility">Icon</string>
    <string name="hintPhone">favourite phone number</string>
    <string name="numberButton">Change phone number</string>
    <string name="descriptionNumber">In case of incident detected, emergency alert message will be sent to number that you insert here :</string>

</resources>
