<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:whatever="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="it.unibo.lam.roadsosecurity.NumberActivity">


    <Button
        android:id="@+id/savePhoneButton"
        android:layout_width="0dp"
        android:layout_height="65dp"
        android:layout_marginBottom="46dp"
        android:layout_marginEnd="46dp"
        android:layout_marginStart="46dp"
        android:layout_weight="1"
        android:height="60dp"
        android:background="@drawable/home_buttons"
        android:drawablePadding="6dp"
        android:fontFamily="casual"
        android:gravity="start|center"
        android:padding="6dp"
        android:text="@string/savePhoneNumber"
        android:textAlignment="center"
        android:textColor="#000"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1" />

    <EditText
        android:id="@+id/phoneText"
        android:layout_width="289dp"
        android:layout_height="53dp"
        android:ems="10"
        android:inputType="phone"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textSize="24sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.131"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.71"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1" />


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:contentDescription="@string/accessibility"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/icon_about"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1" />

    <TextView
        android:id="@+id/errorText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/insertNumber"
        android:textAlignment="textStart"
        android:textAllCaps="false"
        android:textColor="@color/colorAccent"
        android:visibility="gone"
        app:layout_constraintLeft_toLeftOf="@+id/phoneText"
        app:layout_constraintTop_toBottomOf="@+id/phoneText"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintTop_creator="1" />

    <Button
        android:id="@+id/getContactButton"
        android:layout_width="88dp"
        android:layout_height="63dp"
        android:layout_marginLeft="11dp"
        android:layout_marginStart="11dp"
        android:background="@android:drawable/ic_menu_search"
        android:textAlignment="center"
        app:layout_constraintBaseline_toBaselineOf="@+id/phoneText"
        app:layout_constraintLeft_toRightOf="@+id/phoneText"
        tools:layout_constraintBaseline_creator="1"
        tools:layout_constraintLeft_creator="1" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="140dp"
        android:layout_marginEnd="27dp"
        android:layout_marginStart="27dp"
        android:layout_marginTop="43dp"
        android:fontFamily="casual"
        android:text="@string/descriptionNumber"
        android:textAllCaps="true"
        android:textSize="24sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1" />

</android.support.constraint.ConstraintLayout>
